<resources>
    <string name="app_name">戒酒小幫手</string>
    <string name="loading">載入中</string>
    <string name="brac">酒精濃度</string>
    <string name="start">開始</string>
    <string name="morning">早上</string>
    <string name="morning_time">0&#8211;12</string>
    <string name="noon">中午</string>
    <string name="noon_time">12&#8211;18</string>
    <string name="night">晚上</string>
    <string name="night_time">18&#8211;24</string>
    <string name="today_test">今日測試</string>
    <string name="today_test_none">尚未測試</string>
    <string name="week_test">每周測試統計</string>
    <string name="month_test">每月統計測試</string>
    <string name="morning_short">早</string>
    <string name="noon_short">中</string>
    <string name="night_short">晚</string>
    <string name="test_pass">通過</string>
    <string name="test_fail">不通過</string>
    <string name="test_none">未測試</string>
    <string name="done">完成</string>
    <string name="page_help">頁數</string>
    <string name="emotion">心情量尺</string>
    <string name="emotion_short">心情</string>
    <string name="craving">渴求指數</string>
    <string name="craving_short">渴求</string>
    <string name="brac_result">酒測結果</string>
    <string name="brac_result_short">酒測值</string>
    <string name="total_result">綜合資料</string>
    <string name="analysis_progress">已戒酒時間</string>
    <string name="analysis_counter">已獲得點數</string>
    <string name="analysis_saving">已節省金錢</string>
    <string name="analysis_ranking">您的排名</string>
    <string name="high">高</string>
    <string name="low">低</string>
    <string name="after_test_pass">做得很好！</string>
    <string name="after_test_fail">好好加油！</string>
    <string name="after_questionnaire">繼續加油！</string>
    <string-array name="emotion_state">
        <item>　沮喪　</item>
        <item>　低落　</item>
        <item>　普通　</item>
        <item>　愉快　</item>
        <item>　快樂　</item>
    </string-array>
    <string-array name="craving_state">
        <item>無\n　</item>
        <item>ㄧ點\n</item>
        <item>輕微\n可以控制</item>
        <item>輕度\n但未行動</item>
        <item>輕中度\n蠢蠢欲動</item>
        <item>中度\n想去買</item>
        <item>中強度\n等一下買</item>
        <item>強烈\n考慮要喝</item>
        <item>很強烈\n猶豫再喝</item>
        <item>極強烈\n馬上就喝</item>
    </string-array>
    <string name="wait">請稍待</string>
    <string name="msg_box_title">自我了解</string>
    <string name="msg_box_help1">您的心情量尺：</string>
    <string name="msg_box_help2">您的渴求程度：</string>
    <string name="msg_box_help3">是否回報現在位置？</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="send">寄送</string>
    <string name="cancel">取消</string>
    <string name="ok">確定</string>
    <string name="msg_box_toast_cancel">確定放棄填寫？</string>
    <string name="msg_box_toast_send">確定完成自我了解？</string>
    <string name="notification_msg_1">該吹氣了！</string>
    <string name="notification_msg_2">您已停酒了一小時，請再繼續努力！</string>
    <string name="test_guide_not_turn_on">未啟動酒測裝置</string>
    <string name="test_guide_turn_on">已啟用酒測裝置\n請稍待酒測器準備</string>
    <string name="test_guide_show_turn_on">請按酒測裝置右下角按鈕\n以啟用酒測裝置</string>
    <string name="test_guide_start">請點選\'開始\'進行測試</string>
    <string name="test_guide_msg_box">請依對話框指示進行操作</string>
    <string-array name="test_guide_msg">
        <item>飲酒過量，有礙健康</item>
        <item>飲酒過量，害人害己</item>
        <item>半杯茶，贏過一壺酒</item>
        <item>應酬不喝酒，健康才長久</item>
        <item>健康人生，減速前進\n酒色財氣，禁止通行</item>
        <item>酒不入口，健康不用愁</item>
        <item>遠離酒，健康久久</item>
        <item>要安全別喝酒！</item>
        <item>有志不在年高\n無志空長百歲</item>
        <item>積極就是比別人多走一步</item>
        <item>凡事不可\n真的變成不可能</item>
        <item>放開懷抱面對轉變\n但不要放走你的價值</item>
        <item>要社會不淘汰你\n你首先要不放棄自己</item>
        <item>成功非僥幸\n失敗有原因</item>
        <item>人逢順境不逞強\n身處逆境不示弱</item>
        <item>精神的滿足比肚子\n的滿足來得長久</item>
        <item>人生就像踏單車\n不斷向前才能取得平衡</item>
        <item>成功人講勤力\n失敗者才講運氣</item>
        <item>你自己就是你自己\n給自己一個認同就可以</item>
        <item>生命在閃耀中現出絢爛\n在平凡中現出真實</item>
        <item>憂慮不會消除明天的憂傷\n但會使你失去今天的力量</item>
        <item>有好的觀念才能\n發揮生命的功能</item>
        <item>正視疾病、勇於忍受的人\n將變得更堅強、壯大</item>
        <item>每天告訴自己一次\n『我真的很不錯』</item>
        <item>人若軟弱就是\n自己最大的敵人</item>
        <item>人若勇敢就是\n自己最好的朋友</item>
        <item>有理想在的地方\n地獄就是天堂</item>
    </string-array>
    <string name="test_guide_end">\n請點選按鈕以結束</string>
    <string name="test_guide_testing">請將臉對於螢幕中央，\n並開始吹氣</string>
    <string name="test_guide_test_fail">酒測器沒電了</string>
    <string name="test_guide_test_timeout">測試超時</string>
    <string name="test_guide_connect_fail">酒測器連接錯誤</string>
    <string name="test_guide_multi_blow">吹氣不穩以致測試失敗</string>
    <string name="test_guide_zero_duration">連線錯誤，請重啟\n酒測器及手機藍牙功能\n請點選按鈕以結束</string>
    <string name="test_guide_pair">手機與酒測器配對中，\n對話框跳出後，PIN碼請輸入 1234</string>
    <string name="tutorial_next">點擊進入下一步</string>
    <string-array name="tutorial_step">
        <item>按下開關，使指示燈亮起</item>
        <item>進入測試頁面按下開始按鈕</item>
        <item>對準吹氣口持續吹氣五秒鐘</item>
    </string-array>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string-array name="analysis_progress_help">
        <item>已戒酒</item>
        <item>周，完成此療程尚餘</item>
        <item>周</item>
    </string-array>
    <string-array name="analysis_counter_help">
        <item>已累積</item>
        <item>點數，回診時可兌換</item>
        <item>張禮卷</item>
    </string-array>
    <string-array name="analysis_saving_help">
        <item>您已節省</item>
        <item>元，</item>
        <item>為</item>
        <item>元</item>
    </string-array>
    <string-array name="analysis_ranking_help">
        <item>與戒酒朋友相比，您參與表現的排名：</item>
        <item>與戒酒朋友相比，您今日表現的排名：</item>
    </string-array>
    <string name="money_sign">$</string>
    <string name="audio_box_toast_timeup">一分鐘到了</string>
    <string name="audio_box_toast_record_end">完成錄音</string>
    <string name="audio_box_toast_play_end">結束播放</string>
    <string name="audio_box_playing">播放中</string>
    <string name="audio_box_recording">錄音中，剩餘</string>
    <string name="audio_box_preparing">準備中</string>
    <string name="minute">分鐘</string>
    <string name="second">秒</string>
    <string-array name="audio_box_help">
        <item>錄下或聆聽在</item>
        <item>的心情\n(最長可達一分鐘)</item>
    </string-array>
    <string-array name="quote_message">
        <item>酒精是一位可畏的敵人，但您相信不會被\n敵人擺布，也決不低頭認輸。</item>
        <item>想踏上戒酒這條路已經很久了，您正在這\n路上。珍惜每一天，會感覺愈來愈好。</item>
        <item>您發現不能空等您的船來到，而是您得自\n己游向它。</item>
        <item>您清楚您可以從過去的失敗中，要如何讓\n自己現在更好，更珍惜戒酒的日子。</item>
        <item>您開始懂得好好善待自己，並且”自愛”\n是一生最重要的一場戀愛。</item>
        <item>對過去憤怒，或對未來恐懼，只是讓您的\n生活變得更無力，更容易錯過現在。</item>
        <item>我們的價值是由我們是怎樣的人來決定，\n而不是有了什麼來決定。</item>
        <item>你正勇於面對戒酒在生活的挑戰，接受自\n己的不足，但也珍惜自己的任何改變。</item>
        <item>您發現當您越認真努力戒酒，生活變得更\n順利，運氣也會跟著變好。</item>
        <item>您相信自己一步一步在走您自己所創造的\n不一樣中。</item>
        <item>就像一次一次的身體訓練，每一次都讓我\n們變得更強壯或更堅定。</item>
        <item>您發現別人的鼓勵讓我們更堅持下去，但\n若可以鼓勵他人，更能讓生活更有意義。</item>
    </string-array>
    <string-array name="quote_learning">
        <item>面對問題及相信自我！</item>
        <item>確定決心及抱持希望！</item>
        <item>下定決心並主動出擊！</item>
        <item>自我接納及了解！</item>
        <item>自愛並善待自身！</item>
        <item>保持平靜並活在當下！</item>
        <item>對自己負責且致力改變！</item>
        <item>勇於面對、接納自我並改變！</item>
        <item>感受自身的進步！</item>
        <item>持續努力並了解自身！</item>
        <item>努力不懈並堅定決心！</item>
        <item>感謝他人並回饋大眾！</item>
    </string-array>
    <string name="quote_next_message">您將從中學習‧‧‧</string>
    <string name="call_to">要聯絡誰？</string>
    <string name="next">下一步</string>
    <string-array name="question_type0_help">
        <item>為了家人和不一樣的自己\n</item>
        <item>我們將成為我們所想要成\n為的人</item>
        <item>打破所有的阻抗和障礙</item>
        <item>一天過一天，我感覺我的\n狀況越來越好</item>
        <item>好事多磨，戒酒需要不斷\n的努力</item>
        <item>戒酒成功與失敗只有一線\n之隔</item>
        <item>不要只從少喝幾杯酒來衡\n量每天的成效</item>
        <item>做一件事需要具備能力，\n但要真正戒酒</item>
        <item>酒不沾唇</item>
        <item>我能走出之前酒癮的困擾</item>
        <item>我們最愛的是我們自己</item>
        <item>生命是張空白紙，重點是</item>
        <item>成功的戒酒是態度的改變</item>
        <item>只有突破現狀，才有意想\n不到的收穫</item>
        <item>千萬不要低頭，勇於面對\n每一個挑戰</item>
        <item>宇宙中祇有一芥之地你肯定可以改善</item>
        <item>不要屈服於憂愁，要堅定地抗拒它</item>
        <item>世界上沒有比快樂更能使人美麗的化妝品</item>
        <item>誰能以深刻的內容充實每個瞬間，誰就是在</item>
        <item>憂慮不會消除明天的憂傷</item>
        <item>不要輕視自己，所有人都是</item>
        <item>正視疾病，勇於忍受的人，將變得</item>
        <item>不論你在什麼時候開始，重要的是</item>
        <item>抱最大的希望</item>
        <item>美好的生命應該充滿期待、驚喜和感激</item>
        <item>覺得自己做的到和不做的到，其實只在一念之間</item>
        <item>人只要不失去方向</item>
        <item>人生重要的不是所站的位置</item>
        <item>當你能飛的時候就不要放棄飛</item>
        <item>當你能夢的時候就不要放棄夢</item>
        <item>自己要先看得起自己</item>
        <item>一個今天勝過兩個明天</item>
        <item>肯承認錯誤則錯已改了一半</item>
        <item>理想的路總是為有信心的人預備著</item>
        <item>所有欺騙中，自欺是最為嚴重的</item>
        <item>把你的臉迎向陽光</item>
        <item>不如意的時候不要儘往悲傷裡鑽</item>
        <item>因害怕失敗而不敢放手一搏，永遠不會成功</item>
        <item>漫無目的的生活就像出海航行而沒有指南針</item>
        <item>人生操之在我</item>
        <item>以誠實的態度去面對人生</item>
        <item>為自己而戰</item>
        <item>以身作則，身體力行</item>
        <item>用最多的夢想面對未來</item>
        <item>用最少的浪費面對現在</item>
        <item>放開懷抱面對轉變，但不要放走你的價值</item>
        <item>一句合宜的話，就如金蘋果跌在銀網子裡</item>
        <item>今天工作不努力，明天努力找工作</item>
        <item>贈人以言，重如珠玉</item>
        <item>不怕口袋空空，只怕腦袋空空</item>
        <item>口才宜於用來應敵，卻不宜用來待友</item>
        <item>知識的死敵不是無知，而是昧於無知</item>
        <item>萬物靜觀皆自得</item>
        <item>生活是一種人人須學而無人能教的藝術</item>
        <item>人的正確功能是生活 ，而不是生存！</item>
        <item>書本就如降落傘</item>
        <item>可以與自己性格不同的人融洽地相處是</item>
        <item>進取的人會視每個危機為一個機會</item>
        <item>誠意=</item>
        <item>人生最大的快樂不在於佔有什麼，而在於</item>
        <item>真正的快樂是內在的，只有在人類的心靈才能發現</item>
        <item>生命在閃耀中現出絢爛，在平凡中現出真實</item>
        <item>生命，那是自然會給人類去雕琢的寶石</item>
        <item>人生的價值，應當看他貢獻什麼</item>
        <item>最困難的職業就是怎樣為人</item>
        <item>嘲弄往往是助燃的氧氣，促發了怒火的蔓延</item>
        <item>你不應該拿自己和別人的最佳表現相比</item>
        <item>生氣是拿別人做錯的事來懲罰自己</item>
        <item>愚者用肉體監視心靈</item>
        <item>只要有信心，人永遠不會挫敗</item>
        <item>人若軟弱就是自己最大的敵人</item>
        <item>美好的生命應該充滿</item>
        <item>快樂要懂得分享</item>
        <item>快樂不是因為擁有的多而是</item>
        <item>因害怕失敗而不敢放手一搏，永遠不會成功</item>
    </string-array>
    <string name="emotionDIY_title">心情DIY</string>
    <string name="emotion_manage_title">情緒管理</string>
    <string name="about_title">關於</string>
    <string name="about_help">詳細資料：</string>
    <string name="about_setting">設定：</string>
    <string name="about_time_gap">提醒時間間隔為：</string>
    <string name="phone">聯絡開發團隊：</string>
    <string name="phone_number"><u>(02)3366-4926</u></string>
    <string name="storytelling_message">您是否已分享您的戒酒過程？</string>
    <string name="email"><u>ubicomplab.ntu@gmail.com</u></string>
    <string name="lock_message">恭喜您已完成戒酒小幫手的療程，感謝您於療程期間的協助，希望您之後繼續保持並遠離酒精！\n\n因為研究需求，將暫停使用戒酒小幫手三個月。 這段期間，請定期回診進行追蹤觀察，再次感謝你對本研究的幫忙。\n\n您現在可以選擇移除掉戒酒小幫手，或是暫時將戒酒小幫手保留在手機內。三個月後，若是有需要再次啟用戒酒小幫手，請點選最下面的"關於"以聯絡戒酒小幫手團隊。謝謝！\n\n戒酒小幫手團隊　敬上</string>
    <string name="lock_about">完成訊息：</string>
</resources>