<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LockedActivity" >

    <RelativeLayout
        android:id="@+id/lock_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFf39800" >

        <ImageView
            android:id="@+id/lock_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:scaleType="fitXY"
            android:src="@drawable/titlebar_icon" />

        <TextView
            android:id="@+id/lock_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/lock_logo"
            android:text="@string/app_name"
            android:textColor="#FFFFFFFF" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/questionnaire_bar_question" >

        <TextView
            android:id="@+id/lock_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/lock_about"
            android:textColor="#FF777777" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/about_bg" >

        <TextView
            android:id="@+id/lock_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/lock_message"
            android:textColor="#FF727171" />

        <LinearLayout
            android:id="@+id/lock_about_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/about_selector"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/lock_goto_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:maxLines="2"
                android:text="@string/about_title"
                android:textColor="#FF5c5c5c" />

            <ImageView
                android:id="@+id/lock_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:src="@drawable/questionnaire_item_ok" />

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>