<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
   <RelativeLayout
       	android:id="@+id/analysis_rating_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/analysis_title_bar" 
        >

   		<TextView
   		    android:id="@+id/analysis_rating_title"
   		    android:layout_width="wrap_content"
   		    android:layout_height="wrap_content"
   		    android:gravity="center"
   		    android:text="@string/analysis_ranking"
   		    android:textColor="#FFFFFFFF" />

   </RelativeLayout>

   
   <TextView
        android:id ="@+id/analysis_rating_help2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FF000000"
        android:gravity="center"
    	/>
    <RelativeLayout 
        android:id="@+id/analysis_rating_content_layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

	    <ImageView
	        android:id="@+id/analysis_rating_bar2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:layout_centerVertical="true"
	        android:contentDescription="@string/analysis_ranking"
	        android:scaleType="fitXY"
	        android:src="@drawable/analysis_rating_bar" />
        
        <ImageView
            android:id="@+id/analysis_rating_pointer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@string/analysis_ranking"
            android:scaleType="fitXY"
            android:src="@drawable/analysis_rating_pointer" />
        
        <TextView
            android:id="@+id/analysis_rating_low2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/analysis_rating_bar2"
            android:gravity="center"
            android:text="@string/low"
            android:textColor="#FF000000" />
        
         <TextView
             android:id="@+id/analysis_rating_high2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_toRightOf="@+id/analysis_rating_bar2"
             android:gravity="center"
             android:text="@string/high"
             android:textColor="#FF000000" />
        
         <ImageView
             android:id="@+id/analysis_rating_arrow2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:src="@drawable/rank_arrow" />
         
       </RelativeLayout>
   
   
    <TextView
        android:id ="@+id/analysis_rating_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FF000000"
        android:gravity="center"
    	/>
   
    <RelativeLayout 
        android:id="@+id/analysis_rating_content_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

	    <ImageView
	        android:id="@+id/analysis_rating_bar"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:layout_centerVertical="true"
	        android:contentDescription="@string/analysis_ranking"
	        android:scaleType="fitXY"
	        android:src="@drawable/analysis_rating_bar" />
        
        <ImageView
            android:id="@+id/analysis_rating_pointer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@string/analysis_ranking"
            android:scaleType="fitXY"
            android:src="@drawable/analysis_rating_pointer" />
        
        <TextView
            android:id="@+id/analysis_rating_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/analysis_rating_bar"
            android:gravity="center"
            android:text="@string/low"
            android:textColor="#FF000000" />
        
         <TextView
             android:id="@+id/analysis_rating_high"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_toRightOf="@+id/analysis_rating_bar"
             android:gravity="center"
             android:text="@string/high"
             android:textColor="#FF000000" />
        
         <ImageView
             android:id="@+id/analysis_rating_arrow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:src="@drawable/rank_arrow" />
         
       </RelativeLayout>
       
    


</LinearLayout>